fix bug with addFedback-button, make text-align left in tables, chsnge adress to get technologies ,by belskiy

--- a/src/main/webapp/css/table-style.css
+++ b/src/main/webapp/css/table-style.css
@@ -43,3 +43,9 @@
     font-size: 20px;
     margin-left: -15px;
 }
+th.header {
+    text-align: left;
+}
+th.button {
+    text-align: center;
+}
